--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1598,7 +1598,6 @@ payload:
   - '+.180268900.com'
   - '+.18095.com'
   - '+.180qt.com'
-  - '+.181230.com'
   - '+.18183.com'
   - '+.18183g.com'
   - '+.1818hm.com'
@@ -2551,6 +2550,7 @@ payload:
   - '+.3259.com'
   - '+.326pay.com'
   - '+.32800.com'
+  - '+.328888.xyz'
   - '+.328f.com'
   - '+.328vip.com'
   - '+.3290.com'
@@ -5798,7 +5798,6 @@ payload:
   - '+.800mei.net'
   - '+.800pharm.com'
   - '+.800tu.com'
-  - '+.800ux.com'
   - '+.800vod.com'
   - '+.800xs.net'
   - '+.800you.com'
@@ -7539,7 +7538,6 @@ payload:
   - '+.ahcjhjj.com'
   - '+.ahcnb.com'
   - '+.ahdf56.com'
-  - '+.ahdltj.com'
   - '+.ahdsez.com'
   - '+.ahdzfp.com'
   - '+.aheading.com'
@@ -8354,7 +8352,6 @@ payload:
   - '+.amuletor.com'
   - '+.amunion.com'
   - '+.amuren.com'
-  - '+.amwayapp.com'
   - '+.amwiki.org'
   - '+.amysql.com'
   - '+.amyxun.com'
@@ -8539,6 +8536,7 @@ payload:
   - '+.anweishi.com'
   - '+.anweizhi.com'
   - '+.anwen.cc'
+  - '+.anwsa.com'
   - '+.anxcn.com'
   - '+.anxia.com'
   - '+.anxiaoer.com'
@@ -9234,6 +9232,7 @@ payload:
   - '+.avc-mr.com'
   - '+.avc-ott.com'
   - '+.avdll.com'
+  - '+.avemaria.fun'
   - '+.aves.art'
   - '+.avexchina.com'
   - '+.avgh5.com'
@@ -11574,7 +11573,6 @@ payload:
   - '+.brother-cn.net'
   - '+.brother-movie.com'
   - '+.brother.co.jp'
-  - '+.brother66.com'
   - '+.browurl.com'
   - '+.brsiee.com'
   - '+.brtbeacon.com'
@@ -14028,7 +14026,6 @@ payload:
   - '+.chinalincoln.com'
   - '+.chinalink-sh.net'
   - '+.chinalink.tv'
-  - '+.chinalinuxpub.com'
   - '+.chinalions.com'
   - '+.chinaliyou.com'
   - '+.chinalm.org'
@@ -16189,7 +16186,6 @@ payload:
   - '+.cqqiyi.com'
   - '+.cqqnb.net'
   - '+.cqqp.com'
-  - '+.cqqsl.com'
   - '+.cqqsyy.com'
   - '+.cqqzgrh.com'
   - '+.cqrc.net'
@@ -17013,7 +17009,6 @@ payload:
   - '+.dahuatech.com'
   - '+.dahuawang.com'
   - '+.dahuifuwu.com'
-  - '+.dahuitu.net'
   - '+.dahulu.com'
   - '+.dahuoji.biz'
   - '+.dai361.com'
@@ -18617,6 +18612,7 @@ payload:
   - '+.doitim.com'
   - '+.doiua.com'
   - '+.doki8.com'
+  - '+.doklam.wang'
   - '+.dolanzz.com'
   - '+.dolcn.com'
   - '+.dole.club'
@@ -18894,6 +18890,7 @@ payload:
   - '+.dozer.cc'
   - '+.dozview.com'
   - '+.dp.image-gmkt.com'
+  - '+.dp.tech'
   - '+.dp2u.com'
   - '+.dpcafc.com'
   - '+.dpcq1.net'
@@ -19393,6 +19390,7 @@ payload:
   - '+.dyjqd.com'
   - '+.dykj.site'
   - '+.dylc.com'
+  - '+.dyldd.com'
   - '+.dyly.com'
   - '+.dyonr.com'
   - '+.dyqc.com'
@@ -20611,6 +20609,7 @@ payload:
   - '+.etrack08.com'
   - '+.etranshare.com'
   - '+.etrd.org'
+  - '+.etrlie.com'
   - '+.ets100.com'
   - '+.etsc-tech.com'
   - '+.etsoon.com'
@@ -22200,6 +22199,7 @@ payload:
   - '+.fshd.com'
   - '+.fshzg.com'
   - '+.fsigc.com'
+  - '+.fsirya.com'
   - '+.fsjoy.com'
   - '+.fsky.pro'
   - '+.fslgz.com'
@@ -24174,6 +24174,7 @@ payload:
   - '+.guanzhongrc.com'
   - '+.guanzhu.mobi'
   - '+.guanzhulian.com'
+  - '+.guanziheng.com'
   - '+.guapaijia.com'
   - '+.guardrailchina.com'
   - '+.guazhuan.com'
@@ -24418,7 +24419,6 @@ payload:
   - '+.gx-newmedia.com'
   - '+.gx8899.com'
   - '+.gxaedu.com'
-  - '+.gxaj.com'
   - '+.gxar.com'
   - '+.gxb2b.net'
   - '+.gxbaidutg.com'
@@ -26068,6 +26068,7 @@ payload:
   - '+.heyuyhw.com'
   - '+.heywoodsminiprogram.com'
   - '+.heywow.net'
+  - '+.heyynot.com'
   - '+.hez70.com'
   - '+.heze.cc'
   - '+.hezebus.com'
@@ -27360,7 +27361,6 @@ payload:
   - '+.huanghepiao.com'
   - '+.huanghouyz.com'
   - '+.huangjiemin.com'
-  - '+.huangjunying.com'
   - '+.huanglei.me'
   - '+.huangli.com'
   - '+.huangliangbo.com'
@@ -28673,6 +28673,7 @@ payload:
   - '+.idanpianji.com'
   - '+.idaocao.com'
   - '+.idatacube.com'
+  - '+.idataforces.com'
   - '+.idataway.com'
   - '+.idaxiang.org'
   - '+.idbhost.com'
@@ -29746,6 +29747,7 @@ payload:
   - '+.ipmay.com'
   - '+.ipmost.com'
   - '+.ipmph.com'
+  - '+.ipns.network'
   - '+.ipo.hk'
   - '+.ipo.la'
   - '+.ipo3.com'
@@ -31081,6 +31083,7 @@ payload:
   - '+.jideos.com'
   - '+.jidi.com'
   - '+.jidujiao.com'
+  - '+.jidujiasu.com'
   - '+.jiduu.com'
   - '+.jie0.com'
   - '+.jie518.com'
@@ -32582,7 +32585,6 @@ payload:
   - '+.jxage.com'
   - '+.jxal.net'
   - '+.jxbhwl.com'
-  - '+.jxbin.com'
   - '+.jxc4.com'
   - '+.jxcaipu.com'
   - '+.jxcb.net'
@@ -32867,6 +32869,7 @@ payload:
   - '+.kaijia.com'
   - '+.kaijia.me'
   - '+.kaikeba.com'
+  - '+.kailincheng.com'
   - '+.kailing.pub'
   - '+.kaimanhua.com'
   - '+.kaimg.com'
@@ -33476,6 +33479,7 @@ payload:
   - '+.kjsv.com'
   - '+.kjt.com'
   - '+.kjw.cc'
+  - '+.kjwjcq.com'
   - '+.kjwlxt.com'
   - '+.kjycx.com'
   - '+.kjyicdn.com'
@@ -39536,6 +39540,7 @@ payload:
   - '+.nanyuetong.com'
   - '+.nanzhao1.com'
   - '+.naobiao.com'
+  - '+.naocm.com'
   - '+.naoda.net'
   - '+.naoffer.com'
   - '+.naonaola.com'
@@ -40097,7 +40102,6 @@ payload:
   - '+.niutrans.com'
   - '+.niutrip.com'
   - '+.niutuku.com'
-  - '+.niuwap2p.com'
   - '+.niuwk.com'
   - '+.niuxgame77.com'
   - '+.niuxiao.net'
@@ -42962,6 +42966,7 @@ payload:
   - '+.qdxfgy.com'
   - '+.qdxtcw.com'
   - '+.qdycdx.com'
+  - '+.qdyckj.com'
   - '+.qdyijiamei.com'
   - '+.qdymjy.com'
   - '+.qdyudie.com'
@@ -43262,7 +43267,6 @@ payload:
   - '+.qidong.name'
   - '+.qidongyx.com'
   - '+.qidou.com'
-  - '+.qiduowei.com'
   - '+.qie.tv'
   - '+.qiecdn.com'
   - '+.qieerxi.com'
@@ -43530,6 +43534,7 @@ payload:
   - '+.qishu.co'
   - '+.qishu.tw'
   - '+.qishunbao.com'
+  - '+.qishuta.net'
   - '+.qisool.com'
   - '+.qita.love'
   - '+.qitete.com'
@@ -43919,6 +43924,7 @@ payload:
   - '+.qsboy.com'
   - '+.qscfph.com'
   - '+.qschou.com'
+  - '+.qscvli.com'
   - '+.qsebao.com'
   - '+.qseeking.com'
   - '+.qsfcw.com'
@@ -45068,7 +45074,6 @@ payload:
   - '+.routeryun.com'
   - '+.routewize.com'
   - '+.routuan.com'
-  - '+.rouzip.com'
   - '+.rowcan.com'
   - '+.royalpay.com.au'
   - '+.royole.com'
@@ -46333,6 +46338,7 @@ payload:
   - '+.shandongsannong.com'
   - '+.shandongyunpin.com'
   - '+.shandw.com'
+  - '+.shang-chain.com'
   - '+.shang-tai.com'
   - '+.shang0898.com'
   - '+.shang168.com'
@@ -46667,6 +46673,7 @@ payload:
   - '+.shenqiwunet.com'
   - '+.shenquol.com'
   - '+.shenrongda.com'
+  - '+.shenrongjidian.com'
   - '+.shenruan.org'
   - '+.shenshi777.com'
   - '+.shenshiads.com'
@@ -47217,6 +47224,7 @@ payload:
   - '+.shuimiao.net'
   - '+.shuimujiaju.com'
   - '+.shuimushequ.com'
+  - '+.shuimuyulin.com'
   - '+.shuini.biz'
   - '+.shuipingzuo.com'
   - '+.shuiqian.cc'
@@ -49963,7 +49971,6 @@ payload:
   - '+.tao800.com'
   - '+.tao8090.com'
   - '+.taoad.com'
-  - '+.taoba568.com'
   - '+.taobao-img.com'
   - '+.taobao.com'
   - '+.taobao.cz'
@@ -50925,7 +50932,6 @@ payload:
   - '+.tj-kingdee.com'
   - '+.tj-model.com'
   - '+.tj-un.com'
-  - '+.tj-yijiajing.com'
   - '+.tj-zt.com'
   - '+.tj0573.com'
   - '+.tj20.com'
@@ -51469,6 +51475,7 @@ payload:
   - '+.tradplusad.com'
   - '+.traineexp.com'
   - '+.trainingipv6.com'
+  - '+.trainnets.com'
   - '+.trait-wholesale.com'
   - '+.tranbbs.com'
   - '+.trans4e.com'
@@ -54539,7 +54546,6 @@ payload:
   - '+.wekuo.com'
   - '+.welansh.com'
   - '+.welcrm.com'
-  - '+.weldzy.com'
   - '+.welefen.com'
   - '+.weleve.com'
   - '+.weliads.com'
@@ -57546,6 +57552,7 @@ payload:
   - '+.xinhuaapp.com'
   - '+.xinhuacu.com'
   - '+.xinhuamm.net'
+  - '+.xinhuan.mobi'
   - '+.xinhuanet.com'
   - '+.xinhuanet.ltd'
   - '+.xinhuaphoto.org'
@@ -59125,7 +59132,6 @@ payload:
   - '+.ybren.com'
   - '+.ybs120.com'
   - '+.ybscjp.com'
-  - '+.ybssdp.com'
   - '+.ybtong.com'
   - '+.ybtvyun.com'
   - '+.ybvip.com'
@@ -59248,6 +59254,7 @@ payload:
   - '+.yealink.com'
   - '+.yealinkvc.com'
   - '+.yeambin.com'
+  - '+.yeaosound.com'
   - '+.yeapcloud.com'
   - '+.yeapcloud.net'
   - '+.yearnfar.com'
@@ -59257,6 +59264,7 @@ payload:
   - '+.yeboyzq.com'
   - '+.yecdn.com'
   - '+.yedingding.com'
+  - '+.yeduxiaoshuo.com'
   - '+.yee5.com'
   - '+.yeeaoo.com'
   - '+.yeecall.com'
@@ -59422,7 +59430,6 @@ payload:
   - '+.ygzt.net'
   - '+.yh596.com'
   - '+.yh598.com'
-  - '+.yh7761.com'
   - '+.yh99.cc'
   - '+.yhachina.com'
   - '+.yhbimg.com'
@@ -59465,6 +59472,7 @@ payload:
   - '+.yhsrv.com'
   - '+.yhtools.cc'
   - '+.yhtx.tv'
+  - '+.yhudxc.com'
   - '+.yhurl.com'
   - '+.yhwomen.com'
   - '+.yhx3318.com'
@@ -59706,7 +59714,6 @@ payload:
   - '+.yingchulawyer.com'
   - '+.yingci86.com'
   - '+.yingdev.com'
-  - '+.yingdianzi.com'
   - '+.yinge.cc'
   - '+.yinge.tech'
   - '+.yingerchela.com'
@@ -60590,7 +60597,6 @@ payload:
   - '+.youxiduo.com'
   - '+.youxifan.com'
   - '+.youxigongchang.com'
-  - '+.youxigonglue8.com'
   - '+.youxigt.com'
   - '+.youxigu.com'
   - '+.youxiguancha.com'
@@ -61395,7 +61401,6 @@ payload:
   - '+.yuudnn.com'
   - '+.yuuwan.com'
   - '+.yuwan-game.com'
-  - '+.yuwandian.com'
   - '+.yuwanshe.com'
   - '+.yuweixian.com'
   - '+.yuwell.com'
@@ -62179,6 +62184,7 @@ payload:
   - '+.zgshxfw.com'
   - '+.zgsj.com'
   - '+.zgsmmhw.com'
+  - '+.zgsnzj.com'
   - '+.zgsof.com'
   - '+.zgsssss.com'
   - '+.zgsta.com'
