--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1812,6 +1812,7 @@ payload:
   - '+.1qwe3r.com'
   - '+.1r1g.com'
   - '+.1rtb.com'
+  - '+.1rtb.net'
   - '+.1safety.cc'
   - '+.1sapp.com'
   - '+.1shang.com'
@@ -4009,7 +4010,6 @@ payload:
   - '+.51testing.com'
   - '+.51testing.net'
   - '+.51testing.org'
-  - '+.51tfb.com'
   - '+.51tiangou.com'
   - '+.51tie.com'
   - '+.51tietu.net'
@@ -4184,6 +4184,7 @@ payload:
   - '+.52112.com'
   - '+.52114.org'
   - '+.52115211.com'
+  - '+.521199.com'
   - '+.5211game.com'
   - '+.52177.com'
   - '+.521che.com'
@@ -4963,7 +4964,6 @@ payload:
   - '+.60.cm'
   - '+.600052.com'
   - '+.60012.com'
-  - '+.600525.net'
   - '+.600895.com'
   - '+.600zi.com'
   - '+.601601.com'
@@ -5821,7 +5821,6 @@ payload:
   - '+.80juqing.com'
   - '+.80kongjian.com'
   - '+.80kuku.com'
-  - '+.80ml.com'
   - '+.80nb.com'
   - '+.80note.com'
   - '+.80paper.com'
@@ -5958,6 +5957,7 @@ payload:
   - '+.8616.at'
   - '+.86175.com'
   - '+.861817.com'
+  - '+.861ppt.com'
   - '+.86215.com'
   - '+.8624x.com'
   - '+.86255845.com'
@@ -9220,7 +9220,6 @@ payload:
   - '+.avdll.com'
   - '+.avemaria.fun'
   - '+.aves.art'
-  - '+.avexchina.com'
   - '+.avgh5.com'
   - '+.avhome.net'
   - '+.avic.com'
@@ -9259,6 +9258,7 @@ payload:
   - '+.awoyun.com'
   - '+.awsdns-cn-36.net'
   - '+.awsdns-cn-57.com'
+  - '+.awsdns-cn-58.net'
   - '+.awsok.com'
   - '+.awspal.com'
   - '+.awstar.net'
@@ -9519,6 +9519,7 @@ payload:
   - '+.baihuwang.com'
   - '+.baiila.com'
   - '+.baiinfo.com'
+  - '+.baijia.com'
   - '+.baijiacloud.com'
   - '+.baijiahulian.com'
   - '+.baijiasheping.com'
@@ -9732,6 +9733,7 @@ payload:
   - '+.banma.com'
   - '+.banmajsq.com'
   - '+.banmamedia.com'
+  - '+.banmashuo.com'
   - '+.banmasrf.com'
   - '+.banpie.info'
   - '+.banqumusic.com'
@@ -9939,6 +9941,7 @@ payload:
   - '+.bb-seo.com'
   - '+.bb06.com'
   - '+.bb179.com'
+  - '+.bb8gk.com'
   - '+.bbanp.com'
   - '+.bbaod.com'
   - '+.bbaqw.com'
@@ -11392,6 +11395,7 @@ payload:
   - '+.bomman.com'
   - '+.bon-top.com'
   - '+.bon-wine.com'
+  - '+.bonbonbongame.com'
   - '+.bondlady.com'
   - '+.bongmi.com'
   - '+.bongv.com'
@@ -11800,6 +11804,7 @@ payload:
   - '+.bwmelon.com'
   - '+.bwptl.com'
   - '+.bwpx.com'
+  - '+.bwsm.org'
   - '+.bwsoft.net'
   - '+.bwton.com'
   - '+.bwv8.com'
@@ -12797,8 +12802,11 @@ payload:
   - '+.cdnhwc8.com'
   - '+.cdnhwcbzj102.com'
   - '+.cdnhwcedt124.com'
+  - '+.cdnhwcggk22.com'
   - '+.cdnhwchcg02.com'
   - '+.cdnhwcibv122.com'
+  - '+.cdnhwckfz116.com'
+  - '+.cdnhwcprh113.com'
   - '+.cdnhwctnm107.com'
   - '+.cdnidc.net'
   - '+.cdnjtzy.com'
@@ -14597,6 +14605,7 @@ payload:
   - '+.ciaoca.com'
   - '+.ciatcm.org'
   - '+.cibaike.com'
+  - '+.cibawl.com'
   - '+.cibfintech.com'
   - '+.cibn.cc'
   - '+.cibn.com'
@@ -15693,6 +15702,7 @@ payload:
   - '+.code4apk.com'
   - '+.code668.com'
   - '+.codeaha.com'
+  - '+.codebaoku.com'
   - '+.codebe.org'
   - '+.codebus.net'
   - '+.codebye.com'
@@ -16691,6 +16701,7 @@ payload:
   - '+.cxvlog.com'
   - '+.cxw.com'
   - '+.cxwl.com'
+  - '+.cxwyf.net'
   - '+.cxxjs.com'
   - '+.cxy61.com'
   - '+.cxy7.com'
@@ -17159,6 +17170,7 @@ payload:
   - '+.danlirencomedy.com'
   - '+.danlu.net'
   - '+.danmaku.live'
+  - '+.danmaku.tv'
   - '+.danmakupie.com'
   - '+.danmei.la'
   - '+.danmi.com'
@@ -19193,7 +19205,6 @@ payload:
   - '+.duotegame.com'
   - '+.duoti181.shop'
   - '+.duotoupiao.com'
-  - '+.duotuwang.com'
   - '+.duouoo.com'
   - '+.duowan.com'
   - '+.duowanns.com'
@@ -21675,7 +21686,6 @@ payload:
   - '+.fireemblem.net'
   - '+.fireemulator.com'
   - '+.fireflyacg.com'
-  - '+.firefoxbug.com'
   - '+.firemail.wang'
   - '+.firepx.com'
   - '+.firetry.com'
@@ -21712,7 +21722,6 @@ payload:
   - '+.fixsub.net'
   - '+.fiyta.com'
   - '+.fj-atfz.com'
-  - '+.fj007.com'
   - '+.fj10010.com'
   - '+.fj173.net'
   - '+.fj263.com'
@@ -22774,6 +22783,7 @@ payload:
   - '+.gaotieshike.com'
   - '+.gaotu006.club'
   - '+.gaotu100.com'
+  - '+.gaotuxueyuan.com'
   - '+.gaoxiaobang.com'
   - '+.gaoxiaojob.com'
   - '+.gaoxin123.com'
@@ -24664,6 +24674,7 @@ payload:
   - '+.gzyitop.com'
   - '+.gzylhyzx.com'
   - '+.gzyouai.com'
+  - '+.gzyqtlxs.com'
   - '+.gzysbpay.com'
   - '+.gzyszy.com'
   - '+.gzyucai.com'
@@ -24892,6 +24903,7 @@ payload:
   - '+.haisheteam.com'
   - '+.haishisheji.com'
   - '+.haishui.cc'
+  - '+.haishun6688.com'
   - '+.haitaibrowser.com'
   - '+.haitaichina.com'
   - '+.haitao.co'
@@ -25533,13 +25545,13 @@ payload:
   - '+.hbqyxy.com'
   - '+.hbrbmedia.com'
   - '+.hbrc.com'
-  - '+.hbrcgd.com'
   - '+.hbrchina.org'
   - '+.hbrchinese.org'
   - '+.hbrd.net'
   - '+.hbrebond.com'
   - '+.hbrfxh.com'
   - '+.hbruicai.com'
+  - '+.hbruitaigdzz.com'
   - '+.hbrunlin.com'
   - '+.hbryzx.net'
   - '+.hbrzkj.com'
@@ -26493,6 +26505,7 @@ payload:
   - '+.hm86.com'
   - '+.hmecw.com'
   - '+.hmgj.com'
+  - '+.hmgreat.com'
   - '+.hminvestment.com'
   - '+.hmjblog.com'
   - '+.hmlan.com'
@@ -27691,7 +27704,6 @@ payload:
   - '+.huiyiabc.com'
   - '+.huiyijh.com'
   - '+.huiyinxun.com'
-  - '+.huiyisheji.com'
   - '+.huiyizhuo.com'
   - '+.huiyou.com'
   - '+.huiyuandao.com'
@@ -27727,6 +27739,7 @@ payload:
   - '+.huluboshi.com'
   - '+.huluip.tech'
   - '+.huluo.com'
+  - '+.huluoyun.com'
   - '+.hulusaas.com'
   - '+.hulusi.com'
   - '+.huluwa365.com'
@@ -28208,6 +28221,7 @@ payload:
   - '+.hzsaso.com'
   - '+.hzsbz.com'
   - '+.hzsgjj.com'
+  - '+.hzshanjie.com'
   - '+.hzshudian.com'
   - '+.hzstad88.com'
   - '+.hzti.com'
@@ -28391,6 +28405,7 @@ payload:
   - '+.ibbwhat.com'
   - '+.ibcde.com'
   - '+.ibczy.com'
+  - '+.ibeesoft.com'
   - '+.ibeifeng.com'
   - '+.ibeiig.com'
   - '+.ibeiliao.com'
@@ -31500,6 +31515,7 @@ payload:
   - '+.jitongtianxia.com'
   - '+.jitu5.com'
   - '+.jitucdn.com'
+  - '+.jitukaisuo.com'
   - '+.jituofuture.com'
   - '+.jituwang.com'
   - '+.jiubuhua.com'
@@ -34182,7 +34198,6 @@ payload:
   - '+.kydev.net'
   - '+.kye-erp.com'
   - '+.kyemall.com'
-  - '+.kyhere.com'
   - '+.kyhs.me'
   - '+.kyhtech.com'
   - '+.kyimg.com'
@@ -34421,6 +34436,7 @@ payload:
   - '+.lanmaos.com'
   - '+.lanmit.com'
   - '+.lanou3g.com'
+  - '+.lanpanpan.com'
   - '+.lanqb.com'
   - '+.lanqi.com'
   - '+.lanqiao.org'
@@ -35053,6 +35069,7 @@ payload:
   - '+.lfang.com'
   - '+.lfbxw.com'
   - '+.lfcmw.com'
+  - '+.lfdjex.com'
   - '+.lfex.com'
   - '+.lfhacks.com'
   - '+.lfhospital.net'
@@ -35070,6 +35087,7 @@ payload:
   - '+.lfyzjck.com'
   - '+.lg1024.com'
   - '+.lg199.com'
+  - '+.lg5.co'
   - '+.lg5.com'
   - '+.lgctshanghai.com'
   - '+.lgdisplayproduct.com'
@@ -35539,6 +35557,7 @@ payload:
   - '+.linux265.com'
   - '+.linux5.net'
   - '+.linux6.com'
+  - '+.linux78.com'
   - '+.linuxba.com'
   - '+.linuxbaike.com'
   - '+.linuxbaodian.com'
@@ -36095,6 +36114,7 @@ payload:
   - '+.longtaiwj.com'
   - '+.longtanshuw.net'
   - '+.longtask.com'
+  - '+.longtian.info'
   - '+.longtugame.com'
   - '+.longtuohy.com'
   - '+.longu.com'
@@ -38167,6 +38187,7 @@ payload:
   - '+.mini5cn.opera-mini.net'
   - '+.miniadx.com'
   - '+.miniaixue.com'
+  - '+.miniappss.com'
   - '+.miniblink.net'
   - '+.minidaxue.com'
   - '+.minidso.com'
@@ -38557,6 +38578,7 @@ payload:
   - '+.mogoroom.com'
   - '+.mogu.com'
   - '+.mogu.io'
+  - '+.mogua.co'
   - '+.mogubill.com'
   - '+.mogucdn.com'
   - '+.moguf.com'
@@ -39353,6 +39375,7 @@ payload:
   - '+.mz-oneacg.com'
   - '+.mz6.net'
   - '+.mzbei.com'
+  - '+.mzbkw.com'
   - '+.mzboss.com'
   - '+.mzeyes.com'
   - '+.mzfanyi.vip'
@@ -40181,6 +40204,7 @@ payload:
   - '+.nncc626.com'
   - '+.nncj.com'
   - '+.nndims.com'
+  - '+.nndssk.com'
   - '+.nnduyi.com'
   - '+.nngdjt.com'
   - '+.nngjjx.com'
@@ -40707,6 +40731,7 @@ payload:
   - '+.okayapi.com'
   - '+.okbao.com'
   - '+.okbase.net'
+  - '+.okbiao.com'
   - '+.okbike.net'
   - '+.okbmf.com'
   - '+.okbuy.com'
@@ -41404,7 +41429,6 @@ payload:
   - '+.pangolin-sdk-toutiao-b.com'
   - '+.pangolin-sdk-toutiao.com'
   - '+.pangomicro.com'
-  - '+.pangong88.com'
   - '+.pangqiu.com'
   - '+.pangshu.com'
   - '+.pangubox.com'
@@ -41921,6 +41945,7 @@ payload:
   - '+.piaotian5.com'
   - '+.piaotongyun.com'
   - '+.piaowutong.cc'
+  - '+.piaoxian.net'
   - '+.piaoxingqiu.com'
   - '+.piaoyi.org'
   - '+.piaoyun.net'
@@ -42517,6 +42542,7 @@ payload:
   - '+.pro6e.com'
   - '+.procar.cc'
   - '+.processon.com'
+  - '+.procreate.love'
   - '+.product1.djicdn.com'
   - '+.productivity.wiki'
   - '+.proginn.com'
@@ -42729,6 +42755,7 @@ payload:
   - '+.pystarter.com'
   - '+.pytgo.com'
   - '+.python-china.com'
+  - '+.python51.com'
   - '+.pythonav.com'
   - '+.pythonclub.org'
   - '+.pythondoc.com'
@@ -43711,6 +43738,7 @@ payload:
   - '+.qoocc.com'
   - '+.qooic.com'
   - '+.qookar.com'
+  - '+.qoqaoligei.com'
   - '+.qosq.com'
   - '+.qp110.com'
   - '+.qp46.com'
@@ -44047,6 +44075,7 @@ payload:
   - '+.queniukr.com'
   - '+.queniukw.com'
   - '+.queniurc.com'
+  - '+.queniusa.com'
   - '+.queniuso.com'
   - '+.queniusy.com'
   - '+.queniusz.com'
@@ -44771,6 +44800,7 @@ payload:
   - '+.rhjyw.com'
   - '+.rhkj.com'
   - '+.rhsj520.com'
+  - '+.rhtimes.com'
   - '+.rhusen03.com'
   - '+.rhyme.cc'
   - '+.ri-china.com'
@@ -44979,6 +45009,7 @@ payload:
   - '+.rongyi.com'
   - '+.rongyiju.com'
   - '+.rongyitou.com'
+  - '+.rongyizhaofang.com'
   - '+.rongzhitong.com'
   - '+.rongzhongleasing.com'
   - '+.rongzhongloan.com'
@@ -45480,6 +45511,7 @@ payload:
   - '+.sankoup1.com'
   - '+.sankuai.com'
   - '+.sanlan123.com'
+  - '+.sanliu2021.com'
   - '+.sanliwenhua.com'
   - '+.sanpowergroup.com'
   - '+.sanpuzhiyao.com'
@@ -45555,7 +45587,6 @@ payload:
   - '+.sayabear.com'
   - '+.sayloving.com'
   - '+.saywash.com'
-  - '+.sbaliyun.com'
   - '+.sbanzu.com'
   - '+.sbc-mcc.com'
   - '+.sbeira.com'
@@ -45793,6 +45824,7 @@ payload:
   - '+.sdfll.com'
   - '+.sdfmgg.com'
   - '+.sdg-china.com'
+  - '+.sdgaoxing.com'
   - '+.sdgcp.com'
   - '+.sdgdxt.com'
   - '+.sdgh.net'
@@ -46540,6 +46572,7 @@ payload:
   - '+.sheluyou.com'
   - '+.shelwee.com'
   - '+.shen-hua.com'
+  - '+.shen321.com'
   - '+.shenanhui.com'
   - '+.shenbao.org'
   - '+.shenbinghang.com'
@@ -46718,6 +46751,7 @@ payload:
   - '+.shicaidai.com'
   - '+.shichangbu.com'
   - '+.shichuedu.com'
+  - '+.shichuihui.com'
   - '+.shici.store'
   - '+.shicimingju.com'
   - '+.shicishe.com'
@@ -46906,7 +46940,6 @@ payload:
   - '+.shmetro.com'
   - '+.shmiaosai.com'
   - '+.shmljm.com'
-  - '+.shmnyy.com'
   - '+.shmog.org'
   - '+.shmulan.com'
   - '+.shmusic.org'
@@ -47194,6 +47227,7 @@ payload:
   - '+.shujucun.com'
   - '+.shujupie.com'
   - '+.shujutang.com'
+  - '+.shujuwa.net'
   - '+.shuke8.com'
   - '+.shukeba.com'
   - '+.shukeju.com'
@@ -49264,6 +49298,7 @@ payload:
   - '+.sxmaps.com'
   - '+.sxmcwlw.com'
   - '+.sxmtdz.com'
+  - '+.sxmyh.com'
   - '+.sxncb.com'
   - '+.sxnfss.com'
   - '+.sxnxl.com'
@@ -49410,6 +49445,7 @@ payload:
   - '+.syxb.com'
   - '+.syxwang.com'
   - '+.syxwnet.com'
+  - '+.syyqls.com'
   - '+.syys8.com'
   - '+.syyx.com'
   - '+.syyyking.com'
@@ -50000,6 +50036,7 @@ payload:
   - '+.taoniupin.com'
   - '+.taooo.cc'
   - '+.taopiaopiao.com'
+  - '+.taopindi.com'
   - '+.taopinquan.com'
   - '+.taoq.net'
   - '+.taoqao.com'
@@ -50029,6 +50066,7 @@ payload:
   - '+.taoyizhu.com'
   - '+.taoyuantravel.com'
   - '+.taozaisheng.com'
+  - '+.taozhanyun.com'
   - '+.taozhuo.com'
   - '+.taozhutu.com'
   - '+.tapapis.com'
@@ -50506,6 +50544,7 @@ payload:
   - '+.thewowa.com'
   - '+.thexnode.com'
   - '+.theyun.com'
+  - '+.thfdc.net'
   - '+.thfdcsoft.com'
   - '+.thfure.com'
   - '+.thhome.net'
@@ -50609,6 +50648,7 @@ payload:
   - '+.tiankong.com'
   - '+.tiankong.info'
   - '+.tianlaiedu.com'
+  - '+.tianlaijiaoyu.com'
   - '+.tianlaikge.com'
   - '+.tianlan.net'
   - '+.tianmao.com'
@@ -50657,7 +50697,6 @@ payload:
   - '+.tiantianquce.com'
   - '+.tiantianqutao.com'
   - '+.tiantiansoft.com'
-  - '+.tiantiantiao.com'
   - '+.tiantianxuexi.com'
   - '+.tiantk.com'
   - '+.tiantonglaw.com'
@@ -50808,6 +50847,7 @@ payload:
   - '+.timipc.com'
   - '+.timitime.com'
   - '+.timjx.com'
+  - '+.tinetcloud.com'
   - '+.tinfinite.com'
   - '+.ting-tou.com'
   - '+.ting55.com'
@@ -51090,6 +51130,7 @@ payload:
   - '+.toidea.com'
   - '+.token-ad.com'
   - '+.tokenglish.com'
+  - '+.tokenpockety.net'
   - '+.tokensky.net'
   - '+.tokenworld.pro'
   - '+.tokimekiclub.org'
@@ -51380,6 +51421,7 @@ payload:
   - '+.tpg2i1p7.com'
   - '+.tpkey.com'
   - '+.tplife.com'
+  - '+.tplinkglobal.com'
   - '+.tplm123.com'
   - '+.tplogincn.com'
   - '+.tpooo.com'
@@ -53129,7 +53171,6 @@ payload:
   - '+.vhallyun.com'
   - '+.vhao123.com'
   - '+.vhostgo.com'
-  - '+.vhteam.com'
   - '+.vi21.net'
   - '+.vi586.com'
   - '+.via-cert.com'
@@ -53996,6 +54037,7 @@ payload:
   - '+.was-expo.com'
   - '+.wasair.com'
   - '+.washpayer.com'
+  - '+.wasintek.com'
   - '+.wasoinfo.com'
   - '+.wasu.com'
   - '+.wasu.tv'
@@ -55002,6 +55044,7 @@ payload:
   - '+.whwkzc.com'
   - '+.whwm.org'
   - '+.whwomensmarathon.com'
+  - '+.whwuyan.com'
   - '+.whwx2018.com'
   - '+.whwxxy.com'
   - '+.whxc01.com'
@@ -56074,6 +56117,7 @@ payload:
   - '+.wwjia.com'
   - '+.wwmhdq.com'
   - '+.wws23.com'
+  - '+.wwsgh.com'
   - '+.wwstat.com'
   - '+.www-123490.com'
   - '+.www-175345.com'
@@ -58271,6 +58315,7 @@ payload:
   - '+.xtu2.com'
   - '+.xtuan.com'
   - '+.xtuo.net'
+  - '+.xtuos.com'
   - '+.xtutoring.com'
   - '+.xtxcm.com'
   - '+.xtzjcz.com'
@@ -58561,6 +58606,7 @@ payload:
   - '+.xwz999.com'
   - '+.xwzc.net'
   - '+.xwzxjy.com'
+  - '+.xx-motor.com'
   - '+.xx007.com'
   - '+.xx4a.com'
   - '+.xx5.com'
@@ -58573,6 +58619,7 @@ payload:
   - '+.xxcmw.com'
   - '+.xxdao.com'
   - '+.xxfzl.com'
+  - '+.xxgd888.com'
   - '+.xxghh.biz'
   - '+.xxgj47.com'
   - '+.xxgzmlt.com'
@@ -59343,6 +59390,7 @@ payload:
   - '+.yfiot.com'
   - '+.yfjiakao.com'
   - '+.yfklxz.com'
+  - '+.yfldocker.com'
   - '+.yfmhw.com'
   - '+.yfp2p.net'
   - '+.yfpayment.com'
@@ -60746,7 +60794,6 @@ payload:
   - '+.ysgushi.com'
   - '+.yshp.net'
   - '+.yshsports.com'
-  - '+.yshyqxx.com'
   - '+.ysicing.me'
   - '+.ysicing.net'
   - '+.ysidcz.com'
@@ -62230,7 +62277,6 @@ payload:
   - '+.zhanggee.com'
   - '+.zhanghongliang.com'
   - '+.zhanghuanglong.com'
-  - '+.zhangjiaoshou.net'
   - '+.zhangjiexiong.com'
   - '+.zhangjinkun.com'
   - '+.zhangjunbk.com'
@@ -62407,6 +62453,7 @@ payload:
   - '+.zhejiangqinghe.com'
   - '+.zhejie.com'
   - '+.zhejing.tech'
+  - '+.zhekangzc.com'
   - '+.zhekouo.com'
   - '+.zhelaoda.com'
   - '+.zheli.com'
@@ -63436,6 +63483,7 @@ payload:
   - '+.zjstv.com'
   - '+.zjsxlt.com'
   - '+.zjszbank.com'
+  - '+.zjtbe.com'
   - '+.zjtcn.com'
   - '+.zjtdw.com'
   - '+.zjtlcb.com'
@@ -63998,7 +64046,6 @@ payload:
   - '+.zun.gd'
   - '+.zun315.com'
   - '+.zun9.com'
-  - '+.zunshei.com'
   - '+.zunxiangqiming.com'
   - '+.zunxun.com'
   - '+.zunxun.net'
