--- a/directbak.yaml
+++ b/directbak.yaml
@@ -921,7 +921,6 @@ payload:
   - '+.117play.com'
   - '+.118114.net'
   - '+.1188.com'
-  - '+.118cha.com'
   - '+.118cy.com'
   - '+.118jm.com'
   - '+.118pan.com'
@@ -1125,6 +1124,7 @@ payload:
   - '+.1351.com'
   - '+.135309.com'
   - '+.135320.com'
+  - '+.1353j.com'
   - '+.135650.com'
   - '+.13567.com'
   - '+.1356789.com'
@@ -2013,7 +2013,6 @@ payload:
   - '+.21voa.com'
   - '+.21wecan.com'
   - '+.21wenju.com'
-  - '+.21wmd.com'
   - '+.21ww.cc'
   - '+.21xc.com'
   - '+.21xcx.com'
@@ -2263,7 +2262,6 @@ payload:
   - '+.26ef.com'
   - '+.26host.com'
   - '+.26joy.com'
-  - '+.26ksw.com'
   - '+.26lady.com'
   - '+.26tc.com'
   - '+.26youxi.com'
@@ -2280,7 +2278,6 @@ payload:
   - '+.27aichi.com'
   - '+.27dt.com'
   - '+.27dy.com'
-  - '+.27glyy.com'
   - '+.27l.com'
   - '+.27lmfq.com'
   - '+.27lvpai.com'
@@ -2937,6 +2934,7 @@ payload:
   - '+.36cao.live'
   - '+.36dianping.com'
   - '+.36dj.com'
+  - '+.36dm.com'
   - '+.36hjob.com'
   - '+.36jr.com'
   - '+.36kr.com'
@@ -2944,7 +2942,6 @@ payload:
   - '+.36krcdn.com'
   - '+.36krcnd.com'
   - '+.36nu.com'
-  - '+.36sfw.com'
   - '+.36ve.net'
   - '+.36yc.com'
   - '+.36yh.com'
@@ -3399,7 +3396,6 @@ payload:
   - '+.46466.me'
   - '+.465676.tv'
   - '+.4658.net'
-  - '+.466.com'
   - '+.4662000.com'
   - '+.46644.com'
   - '+.46771313.com'
@@ -5931,6 +5927,7 @@ payload:
   - '+.85384.com'
   - '+.853lab.com'
   - '+.85462.lc'
+  - '+.8555220.com'
   - '+.8558.org'
   - '+.85679999.com'
   - '+.857yzf.com'
@@ -6347,6 +6344,7 @@ payload:
   - '+.91fifa.com'
   - '+.91game.com'
   - '+.91gaoding.com'
+  - '+.91goodschool.com'
   - '+.91guzhi.com'
   - '+.91h5.cc'
   - '+.91haiju.com'
@@ -10024,7 +10022,6 @@ payload:
   - '+.bcvbw.com'
   - '+.bcwangluo.net'
   - '+.bcweibo.com'
-  - '+.bcwhy.com'
   - '+.bcwxfy.com'
   - '+.bcxgame.com'
   - '+.bcxww.com'
@@ -10454,6 +10451,7 @@ payload:
   - '+.biaodan.info'
   - '+.biaodiancloud.com'
   - '+.biaodianfu.com'
+  - '+.biaofaw.com'
   - '+.biaoge.com'
   - '+.biaoge.me'
   - '+.biaoju01.com'
@@ -10836,7 +10834,6 @@ payload:
   - '+.bj-apc.com'
   - '+.bj-big.com'
   - '+.bj-dsmzyy.com'
-  - '+.bj-ka.com'
   - '+.bj-kpn.com'
   - '+.bj-sagtar.com'
   - '+.bj-sea.com'
@@ -12115,6 +12112,7 @@ payload:
   - '+.cailutong.com'
   - '+.caimai.cc'
   - '+.caimei365.com'
+  - '+.caimogu.cc'
   - '+.caimogu.net'
   - '+.caimomo.com'
   - '+.cainachina.com'
@@ -13125,7 +13123,6 @@ payload:
   - '+.cgzair.com'
   - '+.cgzy.net'
   - '+.cgzyw.com'
-  - '+.cgzz8.com'
   - '+.ch-auto.com'
   - '+.ch-tools.com'
   - '+.ch-water.com'
@@ -13171,7 +13168,6 @@ payload:
   - '+.chainnode.com'
   - '+.chainsdir.com'
   - '+.chainsql.net'
-  - '+.chainwon.cc'
   - '+.chainwon.com'
   - '+.chairyfish.com'
   - '+.chaishiguan.com'
@@ -13590,6 +13586,7 @@ payload:
   - '+.china-ah.com'
   - '+.china-asahi.com'
   - '+.china-asm.com'
+  - '+.china-audit.com'
   - '+.china-b.com'
   - '+.china-caa.org'
   - '+.china-cas.org'
@@ -15022,6 +15019,7 @@ payload:
   - '+.cmscmc.org'
   - '+.cmseasy.cc'
   - '+.cmsfg.com'
+  - '+.cmsforo.com'
   - '+.cmsjournal.net'
   - '+.cmskcrm.com'
   - '+.cmsn.biz'
@@ -16273,7 +16271,6 @@ payload:
   - '+.crmg-ms.com'
   - '+.crmgz.com'
   - '+.crmip.com'
-  - '+.crmvscrm.com'
   - '+.crnds.com'
   - '+.crnews.net'
   - '+.crodigy.com'
@@ -18281,6 +18278,7 @@ payload:
   - '+.djjw.com'
   - '+.djkk.com'
   - '+.djkpai.com'
+  - '+.djksq.com'
   - '+.djkxl.com'
   - '+.djlmvip.com'
   - '+.djlsoft.net'
@@ -19381,7 +19379,6 @@ payload:
   - '+.dz19.net'
   - '+.dz1982.com'
   - '+.dz31hao.com'
-  - '+.dz666.com'
   - '+.dz746.com'
   - '+.dz88.com'
   - '+.dz88.la'
@@ -21291,6 +21288,7 @@ payload:
   - '+.fei123.com'
   - '+.fei580.com'
   - '+.feiair.com'
+  - '+.feibaizhu.com'
   - '+.feibaokeji.com'
   - '+.feibing.tech'
   - '+.feibisi.com'
@@ -21550,6 +21548,7 @@ payload:
   - '+.fgo-teamup.com'
   - '+.fgo.wiki'
   - '+.fgowiki.com'
+  - '+.fgrgrw002.xyz'
   - '+.fgtymk.com'
   - '+.fgvisa.net'
   - '+.fh1551.com'
@@ -21610,7 +21609,6 @@ payload:
   - '+.finchain.info'
   - '+.finchina.com'
   - '+.finclip.com'
-  - '+.finctive.com'
   - '+.finderweb.net'
   - '+.findhro.com'
   - '+.findic.com'
@@ -24252,6 +24250,7 @@ payload:
   - '+.guomai.cc'
   - '+.guomii.com'
   - '+.guomu.com'
+  - '+.guonongdai.com'
   - '+.guopc.com'
   - '+.guopeiwang.com'
   - '+.guopi8.com'
@@ -24268,7 +24267,6 @@ payload:
   - '+.guowaitianqi.com'
   - '+.guoweitong.com'
   - '+.guoxiehao.com'
-  - '+.guoxingjun.com'
   - '+.guoxinqh.com'
   - '+.guoxue.com'
   - '+.guoxue123.com'
@@ -24864,7 +24862,6 @@ payload:
   - '+.haisenyouxi8.com'
   - '+.haishengfrp.com'
   - '+.haisheteam.com'
-  - '+.haishisheji.com'
   - '+.haishui.cc'
   - '+.haishun6688.com'
   - '+.haitaibrowser.com'
@@ -25367,7 +25364,6 @@ payload:
   - '+.havefun.im'
   - '+.hawbel.com'
   - '+.hawkeye.fun'
-  - '+.hax18.com'
   - '+.haxiu.com'
   - '+.haxwx.cc'
   - '+.hayeen.com'
@@ -25383,8 +25379,10 @@ payload:
   - '+.hb110.cc'
   - '+.hb114.cc'
   - '+.hb12333.com'
+  - '+.hb191.com'
   - '+.hb30.com'
   - '+.hb3rm.com'
+  - '+.hb500.com'
   - '+.hb6.org'
   - '+.hb96568.com'
   - '+.hbadei.com'
@@ -25519,7 +25517,6 @@ payload:
   - '+.hbs-nd.com'
   - '+.hbsccloud.com'
   - '+.hbsdenterprise.com'
-  - '+.hbsem.com'
   - '+.hbsfgk.org'
   - '+.hbshengbangwl.com'
   - '+.hbshgzx.com'
@@ -26084,6 +26081,7 @@ payload:
   - '+.hgcyh.com'
   - '+.hgdgcxy.com'
   - '+.hgfdrf.com'
+  - '+.hgfthgt088.cyou'
   - '+.hghhh.com'
   - '+.hgimage.com'
   - '+.hgitv.com'
@@ -27110,6 +27108,7 @@ payload:
   - '+.hszhizhen.net'
   - '+.hszk.org'
   - '+.hszqxs.com'
+  - '+.hszsb.org'
   - '+.hszsfz.com'
   - '+.hsztbzx.com'
   - '+.hszy8.com'
@@ -29326,6 +29325,7 @@ payload:
   - '+.imquzan.com'
   - '+.imrfresh.com'
   - '+.imshell.com'
+  - '+.imshu.cc'
   - '+.imshusheng.com'
   - '+.imsilkroad.com'
   - '+.imsle.com'
@@ -32709,7 +32709,6 @@ payload:
   - '+.jzzhw.com'
   - '+.jzzx.com'
   - '+.k-day.com'
-  - '+.k-ichiken.com'
   - '+.k-kbox.com'
   - '+.k-res.net'
   - '+.k-xian.com'
@@ -34101,7 +34100,6 @@ payload:
   - '+.kxapp.com'
   - '+.kxapps.com'
   - '+.kxbox.com'
-  - '+.kxcblog.com'
   - '+.kxceping.com'
   - '+.kxdaili.com'
   - '+.kxdao.com'
@@ -35283,7 +35281,6 @@ payload:
   - '+.lihuia.com'
   - '+.lihun66.com'
   - '+.liigou.com'
-  - '+.lijialong.net'
   - '+.lijigang.com'
   - '+.lijingquan.net'
   - '+.lijishi.com'
@@ -35317,7 +35314,6 @@ payload:
   - '+.lilosrv.com'
   - '+.lilvb.com'
   - '+.lily-collection.com'
-  - '+.lilyenglish.com'
   - '+.lilysamericandiner.com'
   - '+.lilysgame.com'
   - '+.limax.com'
@@ -36591,7 +36587,6 @@ payload:
   - '+.lx3.cok.elexapp.com'
   - '+.lx598.com'
   - '+.lxbbt.com'
-  - '+.lxckj.com'
   - '+.lxcvc.com'
   - '+.lxdms.com'
   - '+.lxdns.com'
@@ -37505,6 +37500,7 @@ payload:
   - '+.meijukan.com'
   - '+.meijuniao.net'
   - '+.meijuq.com'
+  - '+.meijust.com'
   - '+.meijutt.com'
   - '+.meijutt.tv'
   - '+.meijuxia.com'
@@ -37617,6 +37613,7 @@ payload:
   - '+.mejoybaby.com'
   - '+.meke-shanghai.com'
   - '+.meke8.com'
+  - '+.melanecholy.com'
   - '+.meldingcloud.com'
   - '+.melodyhome.com'
   - '+.melon.cdnetworks.com'
@@ -37785,6 +37782,7 @@ payload:
   - '+.mhacn.com'
   - '+.mhaoma.com'
   - '+.mhbras.com'
+  - '+.mhcdkey.com'
   - '+.mhealth100.com'
   - '+.mhg001.cc'
   - '+.mhhf.net'
@@ -40514,7 +40512,6 @@ payload:
   - '+.oaqi.com'
   - '+.oatos.com'
   - '+.oauto.com'
-  - '+.oawhy.com'
   - '+.ob-park.com'
   - '+.obagame.com'
   - '+.obcuntu.com'
@@ -40875,6 +40872,7 @@ payload:
   - '+.opcool.com'
   - '+.opd2c.com'
   - '+.opdown.com'
+  - '+.open-douyin.com'
   - '+.open-falcon.com'
   - '+.open-falcon.org'
   - '+.open-open.com'
@@ -42061,7 +42059,6 @@ payload:
   - '+.pjf.name'
   - '+.pjhome.net'
   - '+.pjhubs.com'
-  - '+.pjialin.com'
   - '+.pjjyzx.com'
   - '+.pjnoi.com'
   - '+.pjob.net'
@@ -44882,6 +44879,7 @@ payload:
   - '+.rockyenglish.com'
   - '+.roclee.com'
   - '+.roffar.com'
+  - '+.roguelitegames.com'
   - '+.rohm-chip.com'
   - '+.roidmi.com'
   - '+.rojewel.com'
@@ -46646,7 +46644,6 @@ payload:
   - '+.shhanqiao.com'
   - '+.shheywow.com'
   - '+.shhgzf.com'
-  - '+.shhonghu.com'
   - '+.shhorse.com'
   - '+.shhssts.com'
   - '+.shhuangding.com'
@@ -46939,7 +46936,6 @@ payload:
   - '+.shouyao.com'
   - '+.shouye-wang.com'
   - '+.shouyou.com'
-  - '+.shouyouba.net'
   - '+.shouyoubus.com'
   - '+.shouyoucdn.com'
   - '+.shouyoujz.com'
@@ -47789,6 +47785,7 @@ payload:
   - '+.slegetank.com'
   - '+.slertness.com'
   - '+.slfwq.com'
+  - '+.slgfjzz.com'
   - '+.slicercn.com'
   - '+.slimtheme.com'
   - '+.slink8.com'
@@ -47818,6 +47815,7 @@ payload:
   - '+.sm012.com'
   - '+.sm160.com'
   - '+.sm160.net'
+  - '+.sm688801.com'
   - '+.sm688839.com'
   - '+.sm96596.com'
   - '+.smabaike.com'
@@ -48562,7 +48560,6 @@ payload:
   - '+.ssrcdn.com'
   - '+.ssrcr.com'
   - '+.ssreader.com'
-  - '+.ssrrxx.com'
   - '+.ssrtys.com'
   - '+.ssscdn.com'
   - '+.ssso.com'
@@ -50128,6 +50125,7 @@ payload:
   - '+.tddmp.com'
   - '+.tdfcw.com'
   - '+.tdict.com'
+  - '+.tdigcw.com'
   - '+.tdimg.com'
   - '+.tdldz.com'
   - '+.tdlegg.com'
@@ -53393,6 +53391,7 @@ payload:
   - '+.vpssir.com'
   - '+.vpsss.net'
   - '+.vpszh.com'
+  - '+.vpubmi.com'
   - '+.vqs.com'
   - '+.vqu.show'
   - '+.vqudo.com'
@@ -55433,6 +55432,7 @@ payload:
   - '+.wofangwang.com'
   - '+.wofficebox.com'
   - '+.wofjhs.com'
+  - '+.wofoshanzhuang.com'
   - '+.wogame.net'
   - '+.wogoo.com'
   - '+.wohenizaiyiqi.com'
@@ -55904,6 +55904,7 @@ payload:
   - '+.wukongrom.com'
   - '+.wukongsearch.com'
   - '+.wukongshuo.com'
+  - '+.wukongtj.com'
   - '+.wukongtv.com'
   - '+.wukongwenda.com'
   - '+.wukur.com'
@@ -56696,7 +56697,6 @@ payload:
   - '+.xhyd.com'
   - '+.xhytd.com'
   - '+.xi-soft.com'
-  - '+.xi1361.com'
   - '+.xi5jie.com'
   - '+.xia1ge.com'
   - '+.xiaa.net'
@@ -58098,6 +58098,7 @@ payload:
   - '+.xqjmzc.com'
   - '+.xqjs.net'
   - '+.xqnmz.com'
+  - '+.xqras.asia'
   - '+.xqsbw.com'
   - '+.xqship.com'
   - '+.xqtesting.com'
@@ -58306,7 +58307,6 @@ payload:
   - '+.xuehuile.com'
   - '+.xuehuiwang.com'
   - '+.xueit.com'
-  - '+.xuejiehome.com'
   - '+.xuejiqiao.com'
   - '+.xuekeedu.com'
   - '+.xuekuaiji.com'
@@ -58646,7 +58646,6 @@ payload:
   - '+.xyookj.com'
   - '+.xyous.com'
   - '+.xyppzx.com'
-  - '+.xyq.name'
   - '+.xyqb.com'
   - '+.xyqczy.com'
   - '+.xyqka.com'
@@ -58934,6 +58933,7 @@ payload:
   - '+.yao51.com'
   - '+.yaoao.net'
   - '+.yaobo.net'
+  - '+.yaoburang.com'
   - '+.yaochufa.com'
   - '+.yaocsoft.com'
   - '+.yaodou.net'
@@ -59040,6 +59040,7 @@ payload:
   - '+.ybword.com'
   - '+.ybwzx.com'
   - '+.ybxww.com'
+  - '+.ybyxw.com'
   - '+.ybzhao.com'
   - '+.ybzkb.com'
   - '+.yc123.com'
@@ -59615,7 +59616,6 @@ payload:
   - '+.yingdev.com'
   - '+.yinge.cc'
   - '+.yinge.tech'
-  - '+.yingerchela.com'
   - '+.yingfeiyun.com'
   - '+.yingfeng.me'
   - '+.yinghaicar.com'
@@ -59651,6 +59651,7 @@ payload:
   - '+.yingtaoyun.com'
   - '+.yinguobing.com'
   - '+.yingupuhui.com'
+  - '+.yingwangtech.net'
   - '+.yingwenming.com'
   - '+.yingworks.com'
   - '+.yingwuyuzd.cc'
@@ -59801,6 +59802,7 @@ payload:
   - '+.yishujie.com'
   - '+.yishuliuxue.com'
   - '+.yishun.net'
+  - '+.yishunft.com'
   - '+.yishuweipen.com'
   - '+.yishuzhifa.com'
   - '+.yishuzi.com'
@@ -60960,6 +60962,7 @@ payload:
   - '+.yugusoft.com'
   - '+.yuheii.com'
   - '+.yuheng.tech'
+  - '+.yuhengye.com'
   - '+.yuhou.com'
   - '+.yuhuijob.com'
   - '+.yuiapi.com'
@@ -61655,7 +61658,6 @@ payload:
   - '+.zainanjing365.com'
   - '+.zaisd.com'
   - '+.zaitong.net'
-  - '+.zaitongxiang.com'
   - '+.zaiwai.com'
   - '+.zaixian-fanyi.com'
   - '+.zaixianfanyi.com'
@@ -62020,6 +62022,7 @@ payload:
   - '+.zgjxcad.com'
   - '+.zgjxf.com'
   - '+.zgjyjj.com'
+  - '+.zgjymhw.com'
   - '+.zgkao.com'
   - '+.zgkashi.com'
   - '+.zgkawah.com'
@@ -62105,6 +62108,7 @@ payload:
   - '+.zgxcfx.com'
   - '+.zgxf.org'
   - '+.zgxk.org'
+  - '+.zgxledu.com'
   - '+.zgxqwqh.com'
   - '+.zgxrjy.com'
   - '+.zgxue.com'
@@ -63859,7 +63863,6 @@ payload:
   - '+.ztupic.com'
   - '+.ztups.com'
   - '+.ztvcar.com'
-  - '+.ztvx8.com'
   - '+.ztww.net'
   - '+.ztwx.net'
   - '+.ztxz.cc'
