--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1174,7 +1174,6 @@ payload:
   - '+.139wanke.com'
   - '+.139y.com'
   - '+.139zhuti.com'
-  - '+.13cg.com'
   - '+.13cr.com'
   - '+.13ejob.com'
   - '+.13gm.com'
@@ -1913,7 +1912,6 @@ payload:
   - '+.20z.com'
   - '+.21-rent.com'
   - '+.21-sun.com'
-  - '+.210166.com'
   - '+.210997.com'
   - '+.210z.com'
   - '+.2113.net'
@@ -2562,12 +2560,9 @@ payload:
   - '+.3323399.com'
   - '+.332831.com'
   - '+.333-555.com'
-  - '+.3331909.com'
-  - '+.3332025.com'
   - '+.3332219.com'
   - '+.3332235.com'
   - '+.3332358.com'
-  - '+.3332600.com'
   - '+.333333.com'
   - '+.3335665.com'
   - '+.33360.com'
@@ -4792,6 +4787,7 @@ payload:
   - '+.5earena.com'
   - '+.5earenacdn.com'
   - '+.5eplay.com'
+  - '+.5eplaycdn.com'
   - '+.5etv.com'
   - '+.5ewin.com'
   - '+.5fen.com'
@@ -5665,7 +5661,6 @@ payload:
   - '+.7hon.com'
   - '+.7huang.org'
   - '+.7i2.com'
-  - '+.7icp.com'
   - '+.7ipr.com'
   - '+.7jia.com'
   - '+.7jia2.com'
@@ -6780,7 +6775,6 @@ payload:
   - '+.98t.net'
   - '+.98weixin.com'
   - '+.98znz.com'
-  - '+.99-ss.com'
   - '+.99.com'
   - '+.99083.com'
   - '+.99114.com'
@@ -13722,7 +13716,6 @@ payload:
   - '+.chinaagrisci.com'
   - '+.chinaagv.com'
   - '+.chinaairer.com'
-  - '+.chinaalex.com'
   - '+.chinaamc.com'
   - '+.chinaamuse.com'
   - '+.chinaanonymous.com'
@@ -15087,7 +15080,6 @@ payload:
   - '+.cn365c.com'
   - '+.cn365d.com'
   - '+.cn365e.com'
-  - '+.cn3k5.com'
   - '+.cn3wm.com'
   - '+.cn486.com'
   - '+.cn4e.com'
@@ -17108,7 +17100,6 @@ payload:
   - '+.dangbeiprojector.com'
   - '+.dangcdn.com'
   - '+.dangdang.com'
-  - '+.dangfudh.xyz'
   - '+.dangguai.com'
   - '+.danghongyun.com'
   - '+.danghuan.com'
@@ -19111,7 +19102,6 @@ payload:
   - '+.duocaitou.com'
   - '+.duochang.cc'
   - '+.duodaa.com'
-  - '+.duodada.com'
   - '+.duodanke.com'
   - '+.duodaoertong.com'
   - '+.duodian.com'
@@ -21411,7 +21401,6 @@ payload:
   - '+.fengeini.com'
   - '+.fengex.com'
   - '+.fengfeng.cc'
-  - '+.fenggeba.com'
   - '+.fenghenever.com'
   - '+.fenghong.tech'
   - '+.fenghuaju.cc'
@@ -23176,6 +23165,7 @@ payload:
   - '+.ggcida.com'
   - '+.ggcj.com'
   - '+.ggcykf.com'
+  - '+.ggdata.com'
   - '+.ggemo.com'
   - '+.ggerg.com'
   - '+.ggeye.com'
@@ -27801,7 +27791,6 @@ payload:
   - '+.huomaqun.com'
   - '+.huoming.com'
   - '+.huopinyuan.com'
-  - '+.huoqiuapp.com'
   - '+.huosdk.com'
   - '+.huoshan.cc'
   - '+.huoshan.club'
@@ -27819,7 +27808,6 @@ payload:
   - '+.huowan.com'
   - '+.huoxing24.com'
   - '+.huoxingba.com'
-  - '+.huoxingtan66.com'
   - '+.huoxingzi.com'
   - '+.huoxun.com'
   - '+.huoyan.com'
@@ -28094,6 +28082,7 @@ payload:
   - '+.hzapuqi.com'
   - '+.hzbenet.com'
   - '+.hzbh.com'
+  - '+.hzbianqing.com'
   - '+.hzbike.com'
   - '+.hzbook.com'
   - '+.hzbxm.com'
@@ -28142,7 +28131,6 @@ payload:
   - '+.hzjqhy.com'
   - '+.hzjs56.com'
   - '+.hzjunglepay.com'
-  - '+.hzjunxing.com'
   - '+.hzkayo.com'
   - '+.hzkshx.com'
   - '+.hzkuangxiangzi.com'
@@ -29751,7 +29739,6 @@ payload:
   - '+.ircmnr.com'
   - '+.ireader.com'
   - '+.ireadercity.com'
-  - '+.ireaderm.net'
   - '+.ireadweek.com'
   - '+.ireadyit.com'
   - '+.irealbest.com'
@@ -30709,7 +30696,6 @@ payload:
   - '+.jhsbggw.com'
   - '+.jhscm.com'
   - '+.jhscrm.com'
-  - '+.jhsctv.com'
   - '+.jhsfojiao.com'
   - '+.jhsjtxx.com'
   - '+.jhssapp.com'
@@ -31547,7 +31533,6 @@ payload:
   - '+.jiuzheng.com'
   - '+.jiuzhilan.com'
   - '+.jiuzhinews.com'
-  - '+.jiuzhu999.com'
   - '+.jiuzungame.com'
   - '+.jiwa123.com'
   - '+.jiwanjiwan.com'
@@ -32104,7 +32089,6 @@ payload:
   - '+.jshsoft.com'
   - '+.jshuachen.com'
   - '+.jshy.com'
-  - '+.jsielxo.com'
   - '+.jsifaja.com'
   - '+.jsimg.cc'
   - '+.jsinfo.net'
@@ -32848,6 +32832,7 @@ payload:
   - '+.kamidm.com'
   - '+.kamidox.com'
   - '+.kamopos.com'
+  - '+.kan.cc'
   - '+.kan0512.com'
   - '+.kan300.com'
   - '+.kanbaobei.com'
@@ -35162,6 +35147,7 @@ payload:
   - '+.liba.com'
   - '+.libaclub.com'
   - '+.libai.com'
+  - '+.libaidns.com'
   - '+.libaopay.com'
   - '+.libinx.com'
   - '+.libisky.com'
@@ -39295,7 +39281,6 @@ payload:
   - '+.myworld6.com'
   - '+.myxypt.com'
   - '+.myyishu.com'
-  - '+.myyj.net'
   - '+.myyoudao.com'
   - '+.myyx618.com'
   - '+.myyx915.com'
@@ -39833,7 +39818,6 @@ payload:
   - '+.nfwin.com'
   - '+.nfyk.com'
   - '+.nfzhouyi.com'
-  - '+.nfzmbrand.com'
   - '+.ng-alain.com'
   - '+.nga.wiki'
   - '+.ngabbs.com'
@@ -43696,7 +43680,6 @@ payload:
   - '+.qqaiqin.com'
   - '+.qqaku.com'
   - '+.qqan.com'
-  - '+.qqapk.com'
   - '+.qqba.com'
   - '+.qqbiaoqing.com'
   - '+.qqbiaoqing8.com'
@@ -43987,6 +43970,7 @@ payload:
   - '+.quegoo.com'
   - '+.quegui.run'
   - '+.queji.tw'
+  - '+.queniuaa.com'
   - '+.queniubg.com'
   - '+.queniubm.com'
   - '+.queniucf.com'
@@ -43998,6 +43982,7 @@ payload:
   - '+.queniuiq.com'
   - '+.queniukr.com'
   - '+.queniukw.com'
+  - '+.queniupl.com'
   - '+.queniuqy.com'
   - '+.queniurc.com'
   - '+.queniusa.com'
@@ -45716,7 +45701,6 @@ payload:
   - '+.sdailong.com'
   - '+.sdbao.com'
   - '+.sdbeta.com'
-  - '+.sdbykqn.com'
   - '+.sdbys.com'
   - '+.sdca119.com'
   - '+.sdchem.net'
@@ -50034,7 +50018,6 @@ payload:
   - '+.tbadc.com'
   - '+.tbankw.com'
   - '+.tbcache.com'
-  - '+.tbdazhe.com'
   - '+.tbh5.com'
   - '+.tbhcc.com'
   - '+.tbhelper.com'
@@ -54123,7 +54106,6 @@ payload:
   - '+.webpiaoliang.com'
   - '+.webportal.cc'
   - '+.webpowerchina.com'
-  - '+.webppd.com'
   - '+.webqxs.com'
   - '+.webrtc.win'
   - '+.webs.so'
@@ -55319,7 +55301,6 @@ payload:
   - '+.wmc-bj.net'
   - '+.wmcloud.com'
   - '+.wmcn.com'
-  - '+.wmedias.com'
   - '+.wmiao.com'
   - '+.wming.com'
   - '+.wmiyx.com'
@@ -55676,6 +55657,7 @@ payload:
   - '+.wqqwmw.com'
   - '+.wqrlink.tech'
   - '+.wqxuetang.com'
+  - '+.wqycq.com'
   - '+.wqyunpan.com'
   - '+.wqzx.net'
   - '+.wrating.com'
@@ -56153,7 +56135,6 @@ payload:
   - '+.wxthe.com'
   - '+.wxtj10086.com'
   - '+.wxtpb.com'
-  - '+.wxuse.com'
   - '+.wxw120.com'
   - '+.wxwzt.com'
   - '+.wxy1314.com'
@@ -57249,6 +57230,7 @@ payload:
   - '+.xifumi.com'
   - '+.xifuquan.com'
   - '+.xigeweb.com'
+  - '+.xigou100.com'
   - '+.xigua110.com'
   - '+.xiguabook.com'
   - '+.xiguaimg.com'
@@ -58991,7 +58973,6 @@ payload:
   - '+.yatsenglobal.com'
   - '+.yatsoft.com'
   - '+.yawancaiwu.com'
-  - '+.yawenb.com'
   - '+.yaxi.net'
   - '+.yaxige.com'
   - '+.yaxinde.com'
@@ -59582,6 +59563,7 @@ payload:
   - '+.yimin168.com'
   - '+.yimincaifu.com'
   - '+.yiminchaoshi.com'
+  - '+.yimingkeji.net'
   - '+.yimingzhi.net'
   - '+.yimininfo.com'
   - '+.yiminjiayuan.com'
@@ -60296,6 +60278,7 @@ payload:
   - '+.youchent.com'
   - '+.youcheyihou.com'
   - '+.youchuhuodong.com'
+  - '+.youcloud.com'
   - '+.youda8.com'
   - '+.youdaili.net'
   - '+.youdaiw.com'
@@ -60433,7 +60416,6 @@ payload:
   - '+.youshang.com'
   - '+.youshanmeishi.com'
   - '+.yousheng.shop'
-  - '+.yousheng8.com'
   - '+.youshenhudong.com'
   - '+.yousheyoujia.com'
   - '+.youshifu.com'
@@ -60578,7 +60560,6 @@ payload:
   - '+.youzijie.com'
   - '+.youziku.com'
   - '+.youzikuaibao.com'
-  - '+.youziqk.com'
   - '+.youzu.com'
   - '+.yovisun.com'
   - '+.yovocloud.com'
@@ -63594,6 +63575,7 @@ payload:
   - '+.znyseo.com'
   - '+.znyshurufa.com'
   - '+.znznet.net'
+  - '+.zo-station.com'
   - '+.zoassetmanagement.com'
   - '+.zocai.com'
   - '+.zodiac.wang'
@@ -63691,7 +63673,6 @@ payload:
   - '+.zpjiashuo.com'
   - '+.zplayworld.com'
   - '+.zpm.so'
-  - '+.zppop.com'
   - '+.zppxba.com'
   - '+.zptong.com'
   - '+.zptq.com'
