--- a/directbak.yaml
+++ b/directbak.yaml
@@ -93,7 +93,6 @@ payload:
   - '+.01ke.com'
   - '+.01ki.com'
   - '+.01p.com'
-  - '+.01retail.com'
   - '+.01rv.com'
   - '+.01teacher.com'
   - '+.01tingshu.com'
@@ -929,7 +928,6 @@ payload:
   - '+.118wa.com'
   - '+.119120.org'
   - '+.119958.com'
-  - '+.119hn.com'
   - '+.119tx.com'
   - '+.119you.com'
   - '+.11chuangye.com'
@@ -1966,6 +1964,7 @@ payload:
   - '+.21epub.com'
   - '+.21fid.com'
   - '+.21food.com'
+  - '+.21ge2.com'
   - '+.21hh.com'
   - '+.21hubei.com'
   - '+.21hubei.net'
@@ -2853,6 +2852,7 @@ payload:
   - '+.365cgw.com'
   - '+.365chanlun.com'
   - '+.365che.net'
+  - '+.365cyd.com'
   - '+.365cyd.net'
   - '+.365daan.com'
   - '+.365dhw.com'
@@ -3189,7 +3189,6 @@ payload:
   - '+.3s78.com'
   - '+.3sbase.com'
   - '+.3scard.com'
-  - '+.3seconds.net'
   - '+.3shuwu.com'
   - '+.3snews.net'
   - '+.3songshu.com'
@@ -3844,6 +3843,7 @@ payload:
   - '+.51kehui.com'
   - '+.51kids.com'
   - '+.51kik.com'
+  - '+.51kim.com'
   - '+.51kt.com'
   - '+.51ktbyte.com'
   - '+.51kupai.com'
@@ -4191,7 +4191,6 @@ payload:
   - '+.5258.net'
   - '+.5258da.com'
   - '+.525zf.com'
-  - '+.5262.com'
   - '+.52676.com'
   - '+.526net.com'
   - '+.527578.com'
@@ -4547,7 +4546,6 @@ payload:
   - '+.56a.com'
   - '+.56ads.com'
   - '+.56beijing.org'
-  - '+.56ca.com'
   - '+.56care.com'
   - '+.56china.com'
   - '+.56clte.org'
@@ -4750,7 +4748,6 @@ payload:
   - '+.59w.net'
   - '+.59wj.com'
   - '+.59yx.com'
-  - '+.5a49.com'
   - '+.5a8.org'
   - '+.5aaa.com'
   - '+.5acbd.com'
@@ -5637,7 +5634,6 @@ payload:
   - '+.7cxk.com'
   - '+.7dah8.com'
   - '+.7dapei.com'
-  - '+.7dianw.com'
   - '+.7didc.com'
   - '+.7do.net'
   - '+.7down.net'
@@ -6171,7 +6167,6 @@ payload:
   - '+.8jxn.com'
   - '+.8jzw.cc'
   - '+.8k7k.com'
-  - '+.8k8z.com'
   - '+.8kana.com'
   - '+.8kzw.com'
   - '+.8l8e.com'
@@ -6683,7 +6678,6 @@ payload:
   - '+.96877.net'
   - '+.968pk.com'
   - '+.969009.com'
-  - '+.9697.com'
   - '+.969g.com'
   - '+.96bbs.com'
   - '+.96caifu.com'
@@ -6772,6 +6766,7 @@ payload:
   - '+.98mp.com'
   - '+.98nice.com'
   - '+.98one.com'
+  - '+.98t.la'
   - '+.98t.net'
   - '+.98weixin.com'
   - '+.98znz.com'
@@ -7007,6 +7002,7 @@ payload:
   - '+.9wee.net'
   - '+.9weihu.com'
   - '+.9wuli.com'
+  - '+.9wwx.com'
   - '+.9xiazaiqi.com'
   - '+.9xiu.com'
   - '+.9xiuzb.com'
@@ -7114,13 +7110,13 @@ payload:
   - '+.abcs8.com'
   - '+.abctang.com'
   - '+.abcve.com'
-  - '+.abcxs.com'
   - '+.abcxyzkk.xyz'
   - '+.abcydia.com'
   - '+.abd007.com'
   - '+.abdstem.com'
   - '+.abe-tech.com'
   - '+.abeacon.com'
+  - '+.abgxxc.com'
   - '+.abiechina.com'
   - '+.abiestem.com'
   - '+.abifsey.com'
@@ -7784,7 +7780,6 @@ payload:
   - '+.aiqzu.net'
   - '+.air-level.com'
   - '+.air-matters.com'
-  - '+.air-quality.com'
   - '+.air.cc'
   - '+.airasia.com'
   - '+.airbft.com'
@@ -7847,7 +7842,6 @@ payload:
   - '+.aitiancheng.com'
   - '+.aitrans.net'
   - '+.aituan.com'
-  - '+.aitupian.com'
   - '+.aituwo.com'
   - '+.aityp.com'
   - '+.aiufida.com'
@@ -8997,7 +8991,6 @@ payload:
   - '+.askk.cc'
   - '+.asklib.com'
   - '+.asklicai.com'
-  - '+.askmaclean.com'
   - '+.askpanda.cc'
   - '+.askququ.com'
   - '+.asktao.com'
@@ -9329,7 +9322,6 @@ payload:
   - '+.b2bvip.net'
   - '+.b2cedu.com'
   - '+.b2q.com'
-  - '+.b35ii.com'
   - '+.b3inside.com'
   - '+.b3logfile.com'
   - '+.b5200.net'
@@ -9684,7 +9676,6 @@ payload:
   - '+.banjixiaoguanjia.com'
   - '+.banjuanshu.com'
   - '+.bank-of-china.com'
-  - '+.bank-swift-code.info'
   - '+.bankcomm.com.mo'
   - '+.bankcomm.com.tw'
   - '+.bankcomm.com'
@@ -9746,7 +9737,6 @@ payload:
   - '+.baobeihuijia.com'
   - '+.baobeita.com'
   - '+.baobeituan.com'
-  - '+.baocai.com'
   - '+.baocdn.com'
   - '+.baochaojianghu.com'
   - '+.baodan360.com'
@@ -10023,7 +10013,6 @@ payload:
   - '+.bcyimg.com'
   - '+.bczcdn.com'
   - '+.bczs.net'
-  - '+.bczx.cc'
   - '+.bd-apaas.com'
   - '+.bd-caict.com'
   - '+.bd-film.cc'
@@ -10717,7 +10706,6 @@ payload:
   - '+.biquw.com'
   - '+.biquwo.com'
   - '+.biquwo.net'
-  - '+.biquwu.cc'
   - '+.biquwx.la'
   - '+.biquxs.com'
   - '+.biquyue.com'
@@ -10954,7 +10942,6 @@ payload:
   - '+.bjlmfq.com'
   - '+.bjlongview.com'
   - '+.bjlot.com'
-  - '+.bjlxss.com'
   - '+.bjlyw.com'
   - '+.bjmailqq.com'
   - '+.bjmama.com'
@@ -12412,7 +12399,6 @@ payload:
   - '+.ccb.com'
   - '+.ccbft.com'
   - '+.ccbfund.com'
-  - '+.ccbiji.com'
   - '+.ccbookfair.com'
   - '+.ccbpension.com'
   - '+.ccbride.com'
@@ -16910,7 +16896,6 @@ payload:
   - '+.dadaojiayuan.com'
   - '+.dadayou.com'
   - '+.dadclab.com'
-  - '+.daddychess.online'
   - '+.daddymami.net'
   - '+.dadetong.com'
   - '+.dadianstudio.com'
@@ -17448,7 +17433,6 @@ payload:
   - '+.dd-advisor.com'
   - '+.dd-gz.com'
   - '+.dd-img.com'
-  - '+.dd.net'
   - '+.dd128.com'
   - '+.dd2007.com'
   - '+.dd373.com'
@@ -17747,7 +17731,6 @@ payload:
   - '+.dezhuyun.com'
   - '+.df81.com'
   - '+.df9377.com'
-  - '+.dfbgv.com'
   - '+.dfcfs.com'
   - '+.dfcfw.com'
   - '+.dfcx-bj.com'
@@ -18058,7 +18041,6 @@ payload:
   - '+.didiyunapi.com'
   - '+.didu86.com'
   - '+.diducoder.com'
-  - '+.diebaosoft.com'
   - '+.diebian.net'
   - '+.dieclock.com'
   - '+.diediao123.com'
@@ -18288,6 +18270,7 @@ payload:
   - '+.djzbl.com'
   - '+.djzhj.com'
   - '+.djzr88.com'
+  - '+.djzxn47.com'
   - '+.dkdangle.com'
   - '+.dkjiaoyang.com'
   - '+.dklogs.net'
@@ -18973,7 +18956,6 @@ payload:
   - '+.dspliuliang.com'
   - '+.dspwhy.com'
   - '+.dsq.com'
-  - '+.dsqin.com'
   - '+.dssz.com'
   - '+.dstfsbc.com'
   - '+.dsti.net'
@@ -21456,7 +21438,6 @@ payload:
   - '+.fengyushan.com'
   - '+.fengyx.com'
   - '+.fengzhangame.net'
-  - '+.fengzigame.com'
   - '+.fengzixbs.com'
   - '+.fenha.net'
   - '+.fenhao.me'
@@ -22715,7 +22696,6 @@ payload:
   - '+.gaokzx.com'
   - '+.gaolouimg.com'
   - '+.gaomaomao.com'
-  - '+.gaomeig.com'
   - '+.gaomeluo.com'
   - '+.gaomon.net'
   - '+.gaopaiwood.com'
@@ -22744,7 +22724,6 @@ payload:
   - '+.gaoxin123.com'
   - '+.gaoxinkc.com'
   - '+.gaoyizaixian.com'
-  - '+.gaoyong666.com'
   - '+.gaoyoujob.com'
   - '+.gaozhaiedu.com'
   - '+.gaozhiip.com'
@@ -22998,7 +22977,6 @@ payload:
   - '+.geekluo.com'
   - '+.geekmaker.com'
   - '+.geekman.vip'
-  - '+.geekotg.com'
   - '+.geekpark.net'
   - '+.geekpwn.org'
   - '+.geeksblog.cc'
@@ -23407,6 +23385,7 @@ payload:
   - '+.gloryview.com'
   - '+.glorze.com'
   - '+.glosku.com'
+  - '+.glowapp.fun'
   - '+.glp.com'
   - '+.glqh.com'
   - '+.glshimg.com'
@@ -24041,7 +24020,6 @@ payload:
   - '+.guandang.net'
   - '+.guandata.com'
   - '+.guandianle.com'
-  - '+.guandongphoto.com'
   - '+.guandongyucang.com'
   - '+.guang.com'
   - '+.guangbo.net'
@@ -24169,7 +24147,6 @@ payload:
   - '+.guizheng.net'
   - '+.guizumeimei.com'
   - '+.gujianba.com'
-  - '+.gujianzhixiang.com'
   - '+.gujiushu.com'
   - '+.gukaifu.com'
   - '+.gukaihu.com'
@@ -24904,7 +24881,6 @@ payload:
   - '+.haixiuvv.com'
   - '+.haixue.com'
   - '+.haixuemeili.com'
-  - '+.haixunpr.org'
   - '+.haixunw.com'
   - '+.haiyi701.com'
   - '+.haiying168.com'
@@ -25482,6 +25458,7 @@ payload:
   - '+.hbneww.com'
   - '+.hbooker.com'
   - '+.hbpangu.net'
+  - '+.hbpbnmb.com'
   - '+.hbpengxi.com'
   - '+.hbpic5.com'
   - '+.hbpictures.com'
@@ -25900,7 +25877,6 @@ payload:
   - '+.hengfujz.com'
   - '+.hengjiafish.net'
   - '+.hengjiecdn.com'
-  - '+.hengjiecom.com'
   - '+.hengqian.com'
   - '+.hengqijy.com'
   - '+.hengqikuaiji.com'
@@ -26305,7 +26281,6 @@ payload:
   - '+.hiyun.site'
   - '+.hizg.org'
   - '+.hizhu.com'
-  - '+.hizip.net'
   - '+.hizj.net'
   - '+.hizyw.com'
   - '+.hj-mail.com'
@@ -27308,7 +27283,6 @@ payload:
   - '+.huanhuanhuishou.com'
   - '+.huanhuanxin.com'
   - '+.huanhuba.com'
-  - '+.huaniaoy.com'
   - '+.huanidc.com'
   - '+.huanjinghaojia.com'
   - '+.huanjutang.com'
@@ -28487,7 +28461,6 @@ payload:
   - '+.ichennan.com'
   - '+.ichinaceo.com'
   - '+.ichinaenergy.com'
-  - '+.ichishu.com'
   - '+.ichuanglan.com'
   - '+.ichuangwei.com'
   - '+.ichuangye.com'
@@ -29921,7 +29894,6 @@ payload:
   - '+.itavcn.com'
   - '+.itbegin.com'
   - '+.itbeihe.com'
-  - '+.itbiancheng.com'
   - '+.itbiaoju.com'
   - '+.itbilu.com'
   - '+.itbkz.com'
@@ -31649,7 +31621,6 @@ payload:
   - '+.jjwxc.com'
   - '+.jjwxc.net'
   - '+.jjwxc.org'
-  - '+.jjx88.net'
   - '+.jjx886.com'
   - '+.jjxwzk.org'
   - '+.jjxyls.com'
@@ -32090,7 +32061,6 @@ payload:
   - '+.jshuachen.com'
   - '+.jshy.com'
   - '+.jsifaja.com'
-  - '+.jsimg.cc'
   - '+.jsinfo.net'
   - '+.jsiteec.org'
   - '+.jsjclykz.com'
@@ -33030,6 +33000,7 @@ payload:
   - '+.kd120.com'
   - '+.kd128.com'
   - '+.kd185.com'
+  - '+.kd21xs.com'
   - '+.kd9000.com'
   - '+.kdatacenter.com'
   - '+.kdbbx.com'
@@ -33291,7 +33262,6 @@ payload:
   - '+.kinefinity.com'
   - '+.king-capital.com'
   - '+.kingandwood.com'
-  - '+.kingball.net'
   - '+.kingborn.org'
   - '+.kingbos.com'
   - '+.kingbrother.com'
@@ -34218,7 +34188,6 @@ payload:
   - '+.laichou.com'
   - '+.laichuanfeng.com'
   - '+.laidacai.com'
-  - '+.laidianba.net'
   - '+.laidingba.com'
   - '+.laidou.wang'
   - '+.laidudu.com'
@@ -34385,7 +34354,6 @@ payload:
   - '+.lanshanweb.com'
   - '+.lanshenniao.com'
   - '+.lanshizi.com'
-  - '+.lant6.com'
   - '+.lantaoyu.com'
   - '+.lantian-hotel.com'
   - '+.lantian.tv'
@@ -37198,7 +37166,6 @@ payload:
   - '+.maticsoft.com'
   - '+.matlabsky.com'
   - '+.matocloud.com'
-  - '+.matongwu.com'
   - '+.matongxue.com'
   - '+.matools.com'
   - '+.matpool.com'
@@ -37596,7 +37563,6 @@ payload:
   - '+.meizu.com.hk'
   - '+.meizu.com'
   - '+.meizu.net'
-  - '+.mejoybaby.com'
   - '+.meke-shanghai.com'
   - '+.meke8.com'
   - '+.melanecholy.com'
@@ -38070,7 +38036,6 @@ payload:
   - '+.mingliwenhua.com'
   - '+.mingmen-tech.com'
   - '+.mingpian.biz'
-  - '+.mingqizhongyi.com'
   - '+.mingren888.com'
   - '+.mingrenteahouse.com'
   - '+.mingrenxiang.com'
@@ -39223,7 +39188,6 @@ payload:
   - '+.mysemlife.com'
   - '+.myshow800.com'
   - '+.myshown.com'
-  - '+.myshu.org'
   - '+.myshxz.com'
   - '+.mysinablog.com'
   - '+.mysinamail.com'
@@ -39410,7 +39374,6 @@ payload:
   - '+.nanhuhr.com'
   - '+.nanhutravel.com'
   - '+.nani.online'
-  - '+.nanjiaosuo.com'
   - '+.nanjingchenxi.com'
   - '+.nanjinghuojia.net'
   - '+.nanjingkaishan.com'
@@ -40139,7 +40102,6 @@ payload:
   - '+.nntlj.com'
   - '+.nntskq.com'
   - '+.nntxw.com'
-  - '+.nnudream.com'
   - '+.nnwb.com'
   - '+.nnweding.com'
   - '+.nnynrc.com'
@@ -40363,7 +40325,6 @@ payload:
   - '+.nullice.com'
   - '+.nullno.com'
   - '+.num1dns.com'
-  - '+.nunu8.com'
   - '+.nuobeiliao.com'
   - '+.nuobg.com'
   - '+.nuobz.com'
@@ -40665,7 +40626,6 @@ payload:
   - '+.okii.com'
   - '+.okjike.com'
   - '+.okjk.co'
-  - '+.okjx.cc'
   - '+.okki.com'
   - '+.okkkk.com'
   - '+.oklaapp.com'
@@ -42877,6 +42837,7 @@ payload:
   - '+.qefee.com'
   - '+.qeto.com'
   - '+.qf027.com'
+  - '+.qfamilylaw.com'
   - '+.qfang.com'
   - '+.qfangimg.com'
   - '+.qfedu.com'
@@ -43456,7 +43417,6 @@ payload:
   - '+.qiushile.com'
   - '+.qiushiwl.com'
   - '+.qiushu.cc'
-  - '+.qiushuge.net'
   - '+.qiushuzw.com'
   - '+.qiusuoge.com'
   - '+.qiutianaimeili.com'
@@ -43870,7 +43830,6 @@ payload:
   - '+.qtyd.com'
   - '+.qu.la'
   - '+.qu02.com'
-  - '+.qu114.com'
   - '+.qu247.com'
   - '+.qua.com'
   - '+.qualisports.cc'
@@ -43928,7 +43887,6 @@ payload:
   - '+.quanxi.cc'
   - '+.quanxiangyun.com'
   - '+.quanxiaoshuo.com'
-  - '+.quanxruc.com'
   - '+.quanyin.xyz'
   - '+.quanzhanketang.com'
   - '+.quanzhi.com'
@@ -43963,7 +43921,6 @@ payload:
   - '+.qudong.com'
   - '+.qudong51.net'
   - '+.qudushu.com'
-  - '+.quduwu.com'
   - '+.quduzixun.com'
   - '+.quectel.com'
   - '+.quegame.com'
@@ -44295,6 +44252,7 @@ payload:
   - '+.r5k.com'
   - '+.r5tao.com'
   - '+.r77777777.com'
+  - '+.ra2.com'
   - '+.ra2ol.com'
   - '+.rabbitpre.com'
   - '+.rabbitpre.me'
@@ -44462,6 +44420,7 @@ payload:
   - '+.readmorejoy.com'
   - '+.readnos.com'
   - '+.readnovel.com'
+  - '+.readpai.com'
   - '+.readpaper.com'
   - '+.readpaul.com'
   - '+.readten.net'
@@ -45219,7 +45178,6 @@ payload:
   - '+.ry.rs'
   - '+.ry0663.com'
   - '+.ryanbencapital.com'
-  - '+.ryanc.cc'
   - '+.rybbaby.com'
   - '+.ryc360.com'
   - '+.rydth5.com'
@@ -45497,7 +45455,6 @@ payload:
   - '+.sbc-mcc.com'
   - '+.sbeira.com'
   - '+.sbh15.com'
-  - '+.sbiquge.com'
   - '+.sbk-h5.com'
   - '+.sbkh5.com'
   - '+.sbo8.com'
@@ -45527,7 +45484,6 @@ payload:
   - '+.scanv.com'
   - '+.scarbbs.com'
   - '+.scarclinic-cn.com'
-  - '+.scatwang.com'
   - '+.scbaidu.com'
   - '+.scbao.com'
   - '+.scbxmr.com'
@@ -45642,7 +45598,6 @@ payload:
   - '+.scqcp.com'
   - '+.scqiuchang.com'
   - '+.scrcu.com'
-  - '+.scrdzf.com'
   - '+.scredcross.com'
   - '+.scriptjc.com'
   - '+.scrmtech.com'
@@ -47240,7 +47195,6 @@ payload:
   - '+.shxkwck.com'
   - '+.shxnetwork.com'
   - '+.shxwcb.com'
-  - '+.shy99.com'
   - '+.shyanke.com'
   - '+.shydjscl.com'
   - '+.shyestar.com'
@@ -47627,6 +47581,7 @@ payload:
   - '+.sjono.com'
   - '+.sjpcw.com'
   - '+.sjq315.com'
+  - '+.sjqcj.com'
   - '+.sjrwzz.com'
   - '+.sjsbk.com'
   - '+.sjsydq.com'
@@ -48125,7 +48080,6 @@ payload:
   - '+.somcool.com'
   - '+.somdom.com'
   - '+.someabcd.com'
-  - '+.somebus.net'
   - '+.someet.cc'
   - '+.someonegao.com'
   - '+.somepen.com'
@@ -48704,6 +48658,7 @@ payload:
   - '+.stovol.club'
   - '+.stoyard.com'
   - '+.str-mo.com'
+  - '+.straitchain.com'
   - '+.strconv.com'
   - '+.strcpy.me'
   - '+.streamaxtech.com'
@@ -48828,7 +48783,6 @@ payload:
   - '+.suibiji.com'
   - '+.suilengea.com'
   - '+.suileyoo.com'
-  - '+.suinian.com'
   - '+.suinikan.com'
   - '+.suiniyi.com'
   - '+.suiqiao.com'
@@ -49024,7 +48978,6 @@ payload:
   - '+.supesite.com'
   - '+.supesoft.com'
   - '+.supfast.net'
-  - '+.supfree.net'
   - '+.suplaymart.com'
   - '+.supmeter.com'
   - '+.supmil.com'
@@ -50765,7 +50718,6 @@ payload:
   - '+.tingmimi.net'
   - '+.tingniukeji.com'
   - '+.tingroom.com'
-  - '+.tingshuge.com'
   - '+.tingsonglaw.com'
   - '+.tingtao.net'
   - '+.tingxiangzu.com'
@@ -51928,7 +51880,6 @@ payload:
   - '+.twcczhu.com'
   - '+.twd2.me'
   - '+.twd2.net'
-  - '+.twdm.net'
   - '+.tweakcube.com'
   - '+.twguozao.com'
   - '+.twh5.com'
@@ -52879,7 +52830,6 @@ payload:
   - '+.vacmic.com'
   - '+.vaecn.com'
   - '+.vaeliu.com'
-  - '+.vaillant2.com'
   - '+.vakku.com'
   - '+.validform.club'
   - '+.valinbl.com'
@@ -52978,7 +52928,6 @@ payload:
   - '+.vearne.cc'
   - '+.vecentek.com'
   - '+.vechain.com'
-  - '+.vechain.org'
   - '+.vedamobi.com'
   - '+.vedeng.com'
   - '+.veding.com'
@@ -54268,7 +54217,6 @@ payload:
   - '+.weilekuiming.com'
   - '+.weileryiyt.com'
   - '+.weiling520.com'
-  - '+.weilingdi.com'
   - '+.weilinovel.net'
   - '+.weilitoutiao.net'
   - '+.weilongshipin.com'
@@ -54550,7 +54498,6 @@ payload:
   - '+.wenwentang.com'
   - '+.wenwo.com'
   - '+.wenwu8.com'
-  - '+.wenwuchina.com'
   - '+.wenxi777.com'
   - '+.wenxiang.org'
   - '+.wenxiaoyou.com'
@@ -55527,7 +55474,6 @@ payload:
   - '+.workec.com'
   - '+.workehr.com'
   - '+.workerman.net'
-  - '+.worklaw.vip'
   - '+.workpcb.com'
   - '+.worksoho.com'
   - '+.worktile.com'
@@ -55935,10 +55881,8 @@ payload:
   - '+.wutanyuhuatan.com'
   - '+.wutep.com'
   - '+.wutianqi.com'
-  - '+.wutnews.net'
   - '+.wutongbao123.xyz'
   - '+.wutongguo.com'
-  - '+.wutongshanxia.com'
   - '+.wutongtec.com'
   - '+.wutongxiang.cc'
   - '+.wutos.com'
@@ -56326,7 +56270,6 @@ payload:
   - '+.xashzhjz.com'
   - '+.xasimonds.com'
   - '+.xasixiongdi.com'
-  - '+.xasqw.com'
   - '+.xasrc.com'
   - '+.xaszjf.com'
   - '+.xatao029.com'
@@ -56347,7 +56290,6 @@ payload:
   - '+.xayestar.com'
   - '+.xayrc.com'
   - '+.xazcit.com'
-  - '+.xazjw.com'
   - '+.xaztdz.com'
   - '+.xazwy.com'
   - '+.xazzg.com'
@@ -56449,7 +56391,6 @@ payload:
   - '+.xcpapa.site'
   - '+.xcpapa.xyz'
   - '+.xcq2022.com'
-  - '+.xcqgjx.com'
   - '+.xcqxcq.com'
   - '+.xcrxykl.com'
   - '+.xcsfcjyw.com'
@@ -58102,7 +58043,6 @@ payload:
   - '+.xs.la'
   - '+.xs123.net'
   - '+.xs123.org'
-  - '+.xs222.tw'
   - '+.xs2500.com'
   - '+.xs3cnc.com'
   - '+.xs52.com'
@@ -58145,6 +58085,7 @@ payload:
   - '+.xsmaofa.com'
   - '+.xsmnews.com'
   - '+.xsmore.com'
+  - '+.xsmy54s.com'
   - '+.xsnsyh.com'
   - '+.xsool.com'
   - '+.xsp0311.com'
@@ -58162,7 +58103,6 @@ payload:
   - '+.xstqj.com'
   - '+.xstt5.com'
   - '+.xstx.info'
-  - '+.xstxt.com'
   - '+.xsu.cc'
   - '+.xswdcasting.com'
   - '+.xsycps.com'
@@ -59956,7 +59896,6 @@ payload:
   - '+.yjz9.com'
   - '+.yjzb.app'
   - '+.yjzb.tv'
-  - '+.yk08.com'
   - '+.yk211.com'
   - '+.ykccn.com'
   - '+.ykchicheng.com'
@@ -60619,7 +60558,6 @@ payload:
   - '+.yqhapp.com'
   - '+.yqhlm.com'
   - '+.yqhzz.com'
-  - '+.yqibook.com'
   - '+.yqie.com'
   - '+.yqjsj.com'
   - '+.yqjtgs.com'
@@ -60815,7 +60753,6 @@ payload:
   - '+.yuanshen.com'
   - '+.yuanshichang.com'
   - '+.yuansouti.com'
-  - '+.yuanss.com'
   - '+.yuantengfei.net'
   - '+.yuantengfei.org'
   - '+.yuantiku.com'
@@ -61741,7 +61678,6 @@ payload:
   - '+.zbnxs.com'
   - '+.zbopr.net'
   - '+.zbqlm.com'
-  - '+.zbqzy.com'
   - '+.zbrushcn.com'
   - '+.zbuhe.com'
   - '+.zbusa.com'
@@ -62071,7 +62007,6 @@ payload:
   - '+.zgsynews.com'
   - '+.zgtghccl.com'
   - '+.zgtianqi.com'
-  - '+.zgtlgs.com'
   - '+.zgtsm.com'
   - '+.zgtuku.com'
   - '+.zgtygg.com'
@@ -62555,10 +62490,12 @@ payload:
   - '+.zhimacangku.com'
   - '+.zhimace.com'
   - '+.zhimantian.com'
+  - '+.zhimapay.net'
   - '+.zhimaruanjian.com'
   - '+.zhimatech.com'
   - '+.zhimawenda.com'
   - '+.zhimax.com'
+  - '+.zhimaxkf.com'
   - '+.zhimg.com'
   - '+.zhimi.com'
   - '+.zhimoe.com'
@@ -63802,7 +63739,6 @@ payload:
   - '+.zt1f.com'
   - '+.ztautoparts.com'
   - '+.ztbest.com'
-  - '+.ztbfwpt.com'
   - '+.ztcadx.com'
   - '+.ztch.ltd'
   - '+.ztcia.com'
